@@ -87,6 +87,7 @@
   RELEASE(projectAttributesSubview);
   RELEASE(projectAttributesView);
   RELEASE(projectDescriptionView);
+  RELEASE(projectLanguagesView);
   RELEASE(fileAttributesView);
 
   RELEASE(inspectorPanel);
@@ -124,6 +125,9 @@
 
   // Project Description
   [self createProjectDescription];
+
+  // Project Languages
+  [self createProjectLanguages];
 
   // File Attributes
   [self createFileAttributes];
@@ -171,6 +175,9 @@
       [inspectorView setContentView:projectDescriptionView];
       break;
     case 3:
+      [inspectorView setContentView:projectLanguagesView];
+      break;
+    case 4:
       [inspectorView setContentView:fileAttributesView];
       break;
     }
@@ -692,7 +699,7 @@
 // ==== Project Languages
 // ============================================================================
 
-/*- (void)createProjectLanguages
+- (void)createProjectLanguages
 {
   if (projectLanguagesView)
     {
@@ -706,7 +713,7 @@
     }
 
   [projectLanguagesView retain];
-}*/
+}
 
 // ============================================================================
 // ==== File Attributes
